[gd_scene load_steps=13 format=3 uid="uid://xdmxwk8c478q"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_6hxgu"]
[ext_resource type="Texture2D" uid="uid://bi8a3yd6086xq" path="res://Assets/Art/bricks.png" id="1_ddlgk"]
[ext_resource type="AudioStream" uid="uid://d3a7c3v3015hj" path="res://Assets/Music/blob_jump.ogg" id="2_yid0b"]
[ext_resource type="Texture2D" uid="uid://d1jiw8dvfctvp" path="res://Assets/Art/UI/cross_normal.png" id="3_yba1y"]
[ext_resource type="Texture2D" uid="uid://nrnaspqtjbw0" path="res://Assets/Art/UI/cross_pressed.png" id="4_n317s"]
[ext_resource type="Texture2D" uid="uid://bfh0gjhtqaixb" path="res://Assets/Art/UI/cross_hover.png" id="5_5b0pu"]
[ext_resource type="Texture2D" uid="uid://bkbh2lj7adhsi" path="res://Assets/Art/UI/blob.png" id="6_s4pa3"]
[ext_resource type="Texture2D" uid="uid://3gjatyootgqj" path="res://Assets/Art/UI/play_normal.png" id="7_rbwqc"]
[ext_resource type="Texture2D" uid="uid://bd3rr4vjod1he" path="res://Assets/Art/UI/play_pressed.png" id="8_iv8y5"]
[ext_resource type="Texture2D" uid="uid://ytvb0bdm4ouq" path="res://Assets/Art/UI/play_hover.png" id="9_6yeal"]

[sub_resource type="SystemFont" id="SystemFont_673hr"]
font_names = PackedStringArray("Baskerville Old Face")
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_njsef"]
default_font = SubResource("SystemFont_673hr")

[node name="settings" type="Node2D"]
script = ExtResource("1_6hxgu")
sound = ExtResource("2_yid0b")

[node name="bg" type="Node2D" parent="."]
scale = Vector2(2, 2)

[node name="Sprite2D13" type="TextureRect" parent="bg"]
offset_left = -28.0
offset_top = -32.0
offset_right = 243.0
offset_bottom = 127.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = ExtResource("1_ddlgk")
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="bg"]
offset_left = -26.5
offset_top = -32.0
offset_right = 512.5
offset_bottom = 282.0
mouse_filter = 2
color = Color(0, 0, 0, 0.662745)

[node name="Name" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 390.0
offset_top = 22.0
offset_right = 623.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_njsef")
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_font_sizes/normal_font_size = 64
text = "Settings"

[node name="masterText" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 150.0
offset_top = 190.0
offset_right = 383.0
offset_bottom = 265.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_njsef")
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_font_sizes/normal_font_size = 64
text = "Music"

[node name="music_slider" type="HSlider" parent="."]
offset_left = 330.0
offset_top = 190.0
offset_right = 1530.0
offset_bottom = 334.0
scale = Vector2(0.5, 0.5)
theme_override_icons/grabber = ExtResource("6_s4pa3")
theme_override_icons/grabber_highlight = ExtResource("6_s4pa3")
theme_override_icons/grabber_disabled = ExtResource("6_s4pa3")
theme_override_icons/tick = ExtResource("6_s4pa3")
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="sfxText" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 150.0
offset_top = 340.0
offset_right = 383.0
offset_bottom = 415.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_njsef")
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_font_sizes/normal_font_size = 64
text = "SFX"

[node name="menu" type="TextureButton" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(5, 5)
texture_normal = ExtResource("3_yba1y")
texture_pressed = ExtResource("4_n317s")
texture_hover = ExtResource("5_5b0pu")

[node name="sfx_slider" type="HSlider" parent="."]
offset_left = 330.0
offset_top = 340.0
offset_right = 1530.0
offset_bottom = 484.0
scale = Vector2(0.5, 0.5)
theme_override_icons/grabber = ExtResource("6_s4pa3")
theme_override_icons/grabber_highlight = ExtResource("6_s4pa3")
theme_override_icons/grabber_disabled = ExtResource("6_s4pa3")
theme_override_icons/tick = ExtResource("6_s4pa3")
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="test_sfx" type="TextureButton" parent="."]
offset_left = 179.0
offset_top = 411.0
offset_right = 195.0
offset_bottom = 427.0
scale = Vector2(5, 5)
texture_normal = ExtResource("7_rbwqc")
texture_pressed = ExtResource("8_iv8y5")
texture_hover = ExtResource("9_6yeal")

[node name="sfxText2" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 267.0
offset_top = 438.0
offset_right = 545.0
offset_bottom = 513.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_njsef")
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_font_sizes/normal_font_size = 32
text = "Test SFX Volume"

[connection signal="value_changed" from="music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="value_changed" from="sfx_slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="test_sfx" to="." method="_on_test_sfx_pressed"]
